# binlex

./: .appveyor.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Doxyfile  LICENSE  Makefile  PKGBUILD  README.md  SECURITY.md  blserver  build.rs  compose.local.yml  compose.remote.yml  compose.yml  docker-compose.yml  docker.sh  env.example  file.elf  main.cpp  pyproject.toml  schema.js  setup.py  test.py  tests.py
crates/binlex_processors/embeddings/: Cargo.toml
crates/binlex_processors/embeddings/src/: lib.rs  main.rs
crates/binlex_processors/embeddings/tests/: processor.rs
crates/binlex_processors/example/: Cargo.toml
crates/binlex_processors/example/src/: lib.rs  main.rs
crates/binlex_processors/vex/: Cargo.toml
crates/binlex_processors/vex/src/: lib.rs  main.rs
crates/binlex_processors/vex/tests/: processor.rs
crates/binlex_tools/binlex-mcp/: Cargo.toml
crates/binlex_tools/binlex-mcp/skills/: client.toml  controlflow.toml  core.toml  disassemblers.toml  formats.toml  hashing.toml  imaging.toml  index.local.toml  lifters.toml  workflow.toml  yara.toml
crates/binlex_tools/binlex-mcp/src/: cli.rs  error.rs  main.rs  python.rs  samples.rs  server.rs  skills.rs  state.rs
crates/binlex_tools/binlex-server/: Cargo.toml
crates/binlex_tools/binlex-server/src/: main.rs  routes.rs
crates/binlex_tools/binlex-test/: Cargo.toml
crates/binlex_tools/binlex-test/src/: cli.rs  main.rs
crates/binlex_tools/binlex-test/src/commands/: mod.rs  perf.rs  query.rs
crates/binlex_tools/binlex-test/src/support/: config.rs
crates/binlex_tools/binlex-web/: Cargo.toml
crates/binlex_tools/binlex-web/src/: assets.rs  main.rs  page.rs  query.rs
crates/binlex_tools/binlex-web/src/assets/: app.js  styles.css
crates/binlex_tools/binlex-web/src/assets/js/: render.js  search.js
crates/binlex_tools/binlex-web/src/includes/: web_auth.inc.rs  web_comments.inc.rs  web_config.inc.rs  web_download.inc.rs  web_dto.inc.rs  web_helpers.inc.rs  web_index.inc.rs  web_openapi_error.inc.rs  web_projects.inc.rs  web_router.inc.rs  web_search.inc.rs  web_startup.inc.rs  web_state.inc.rs  web_tags.inc.rs  web_test.inc.rs  web_upload.inc.rs
crates/binlex_tools/binlex-web/src/pages/: index.rs  mod.rs
crates/binlex_tools/binlex-web/templates/pages/: index.html
crates/binlex_tools/binlex-web/templates/pages/partials/: single_select.html  status_badge.html  upload_corpus_picker.html  upload_modal.html  upload_tag_picker.html
crates/binlex_tools/binlex-web/tests/: query_assistant.test.cjs
crates/libvex/libvex-rs/: Cargo.toml  README.md
crates/libvex/libvex-rs/examples/: irsb.rs
crates/libvex/libvex-rs/src/: arm.rs  lib.rs  mips64.rs  x86.rs
plugins/ida/: .gitignore  MANIFEST.in  README.md  __init__.py  binlex_ida.py  main.py  plugin.py  pyproject.toml  qt_compat.py  requirements.txt  setup.py
plugins/ida/actions/: copy_block_vector.py  copy_function_vector.py  copy_hex.py  copy_pattern.py  copy_tlsh.py  export_byte_colormap.py  index_block.py  index_database.py  index_function.py
plugins/ida/core/: __init__.py  compare.py  config.py  context.py  copying.py  disassembly.py  indexing.py  metadata.py  plugin.py  plugin_runtime.py  search.py  yara_creator.py
plugins/ida/gui/: __init__.py  about.py  binlex_server_authentication.py  binlex_server_settings.py  database_export_options.py  main.py  okaycancel.py  progress.py  scan_tlsh.py
plugins/ida/lib/: __init__.py  blclient.py  text.py  worker.py
plugins/ida/ui/: __init__.py  config_editor.py  dialogs.py  dockable_results.py  launcher.py  results.py  yara_dialog.py
src/bindings/python/: .gitignore  Cargo.toml  docs.py  pyproject.toml
src/bindings/python/project/binlex/: __init__.py  __init__.pyi  architecture.py  entropy.py  entropy.pyi  hex.py  hex.pyi  hexdump.py  hexdump.pyi  magic.py  magic.pyi  math.py
src/bindings/python/project/binlex/_global/: __init__.py  __init__.pyi
src/bindings/python/project/binlex/binary/: __init__.py
src/bindings/python/project/binlex/clients/: __init__.pyi  milvus.pyi  minio.py
src/bindings/python/project/binlex/controlflow/: __init__.py  __init__.pyi
src/bindings/python/project/binlex/disassemblers/: __init__.py
src/bindings/python/project/binlex/formats/: __init__.py  __init__.pyi
src/bindings/python/project/binlex/genetics/: __init__.py
src/bindings/python/project/binlex/hashing/: __init__.py
src/bindings/python/project/binlex/imaging/: __init__.py  __init__.pyi  palette.py  palette.pyi  png.py  render.py  render.pyi  svg.py  svg.pyi  terminal.py  terminal.pyi
src/bindings/python/project/binlex/lifters/: __init__.py  __init__.pyi  vex.py  vex.pyi
src/bindings/python/project/binlex/types/: __init__.py  __init__.pyi
src/bindings/python/src/: binary.rs  config.rs  entropy.rs  hex.rs  hexdump.rs  lib.rs  math.rs
src/bindings/python/src/clients/: milvus.rs  minio.rs  mod.rs
src/bindings/python/src/controlflow/: block.rs  function.rs  graph.rs  instruction.rs  mod.rs
src/bindings/python/src/disassemblers/: mod.rs
src/bindings/python/src/disassemblers/capstone/: disassembler.rs  mod.rs
src/bindings/python/src/disassemblers/custom/: mod.rs
src/bindings/python/src/formats/: elf.rs  file.rs  image.rs  macho.rs  mod.rs  pe.rs
src/bindings/python/src/genetics/: allelepair.rs  chromosome.rs  gene.rs  mod.rs
src/bindings/python/src/global/: architecture.rs  config.rs  magic.rs  mod.rs
src/bindings/python/src/hashing/: minhash.rs  mod.rs  sha256.rs  tlsh.rs
src/bindings/python/src/imaging/: colormap.rs  mod.rs  palette.rs  png.rs  render.rs  svg.rs  terminal.rs
src/bindings/python/src/lifters/: mod.rs  vex.rs
src/bindings/python/src/types/: lz4string.rs  memorymappedfile.rs  mod.rs  vecnode.rs
src/lifters/vex/libvex/libvex-sys/: Cargo.toml  build.rs  wrapper.h
src/lifters/vex/libvex/libvex-sys/patches/: guest_x86_padding.diff
tests/fixtures/binlex-processor-complete-test/: Cargo.toml
tests/fixtures/binlex-processor-complete-test/src/: lib.rs  main.rs
(+2136 files in other folders)
