[package]
name = "binlex"
version = "2.0.0"
edition = "2021"
license = "LGPL"
description = "A Binary Genetic Trait Lexer Framework"
authors = ["c3rb3ru5d3d53c"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lief = "0.15.1"
capstone = "0.12.0"
fast-tlsh = "0.1.6"
ring = "0.17.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
twox-hash = "2.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
once_cell = "1.20.2"
rayon = "1.10.0"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
lz4 = "1.28.0"
pdb = "0.8.0"
memmap2 = "0.9.5"
dirs = "5.0.1"
toml = "0.8.19"
glob = "0.3.1"

[workspace]
members = [
    "src/bindings/python/",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "binlex"
path = "src/bin/binlex.rs"

[[bin]]
name = "blyara"
path = "src/bin/blyara.rs"

[[bin]]
name = "blpdb"
path = "src/bin/blpdb.rs"

[[bin]]
name = "blscaler"
path = "src/bin/blscaler.rs"

[[bin]]
name = "blrizin"
path = "src/bin/blrizin.rs"

[[bin]]
name = "blimage"
path = "src/bin/blimage.rs"

[[bin]]
name = "blhash"
path = "src/bin/blhash.rs"

[[bin]]
name = "blcompare"
path = "src/bin/blcompare.rs"

[[bin]]
name = "blelfsym"
path = "src/bin/blelfsym.rs"


[[bin]]
name = "blmachosym"
path = "src/bin/blmachosym.rs"
