[package]
name = "binlex"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "A Binary Genetic Trait Lexer Framework"
authors = ["c3rb3ru5d3d53c"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "fileapi", "ioapiset", "winioctl"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libvex = { path = "crates/libvex/libvex-rs", features = ["pic"] }

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
lief = "0.15.1"
capstone = "0.12.0"
fast-tlsh = "0.1.6"
ring = "0.17.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
postcard = { version = "1.1.3", features = ["alloc"] }
twox-hash = "2.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
once_cell = "1.20.2"
rayon = "1.10.0"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
lz4 = "1.28.1"
interprocess = "2.2.3"
pdb = "0.8.0"
memmap2 = "0.9.5"
dirs = "6.0.0"
toml = "0.8.19"
glob = "0.3.2"
indexmap = "2.7.1"
cxx = "=1.0.138"
image = { version = "0.25.8", default-features = false, features = ["png"] }
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
burn = { version = "0.21.0-pre.2", default-features = false, features = ["std", "dispatch", "ndarray", "cuda", "vulkan"] }
semver = "1.0.27"

[workspace]
members = [
    "bindings/python/",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "binlex"
path = "src/bin/binlex.rs"

[[bin]]
name = "binlex-yara"
path = "src/bin/binlex-yara.rs"

[[bin]]
name = "binlex-image"
path = "src/bin/binlex-image.rs"

[[bin]]
name = "binlex-hash"
path = "src/bin/binlex-hash.rs"

[[bin]]
name = "binlex-symbols"
path = "src/bin/binlex-symbols.rs"

[[bin]]
name = "binlex-processor"
path = "src/bin/binlex-processor.rs"

[[bin]]
name = "binlex-server"
path = "src/bin/binlex-server.rs"
