[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binlex-ida"
version = "0.0.0"
description = "Installer and packaging helpers for the Binlex IDA plugin"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests==2.32.3",
]

[project.scripts]
binlex-ida-install = "plugin:main"

[tool.setuptools]
py-modules = ["binlex_ida", "plugin"]
