[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binlex-ida"
dynamic = ["version"]
description = "Installer and packaging helpers for the Binlex IDA plugin"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
binlex-ida = "binlex_ida:main"

[tool.setuptools]
py-modules = ["binlex_ida"]
