[package]
name = "binlex-processor-vex"
version.workspace = true
edition = "2024"

[lib]
name = "binlex_processor_vex"
path = "src/lib.rs"

[[bin]]
name = "binlex-processor-vex"
path = "src/main.rs"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libvex = { path = "../../libvex/libvex-rs", features = ["pic"] }

[dependencies]
binlex = { path = "../../.." }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

[dev-dependencies]
postcard = { version = "1.1.1", features = ["alloc"] }
