[package]
name = "binlex-server"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "binlex-server"
path = "src/main.rs"

[dependencies]
binlex = { path = "../../.." }
axum = "0.8.4"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
