[package]
name = "binlex-web"
version.workspace = true
edition = "2024"

[[bin]]
name = "binlex-web"
path = "src/main.rs"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.4", features = ["multipart"] }
base64 = "0.22.1"
binlex = { path = "../../.." }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
data-encoding = "2.9.0"
dirs = "6.0.0"
hmac = "0.12.1"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
rand = "0.8.5"
ring = "0.17.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
winnow = "0.7.15"
zip = "0.6.6"
