[package]
name = "binlex-processor-complete-test"
version.workspace = true
edition = "2024"

[dependencies]
binlex = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "binlex_processor_complete_test"
path = "src/lib.rs"

[[bin]]
name = "binlex-processor-complete-test"
path = "src/main.rs"
